# BFI

./: README.md  meson.build
example/: cell_width.bf  fib.bf
pch/: main_pch.hpp
src/: main.cpp
